
  * MIDI driver:
    - added JACK MIDI driver
    - dispatch bank select as ordinary CC as well, the user might seriously
      want to (mis)use it for some purpose ("fixed" in all current MIDI
      input drivers: ALSA, CoreMIDI, JACK, MidiShare, MME)
    - bugfix: pitch bend wasn't working with JackMidi, VST, LV2, MME,
      CoreMidi or AU
    - fixed mingw-w64 compilation error in MME driver

  * instruments database:
    - avoid time consuming samples scanning when adding instruments
      to the instruments database
    - added support for handling lost files in the instruments database
    - Implemented option for adding instruments in separate directories
      in the instruments database
      (patch by Chris Cherrett & Andrew Williams, a bit adjusted)
    - work-around for missing fnmatch function on Windows to make
      instrument database compilable
	- added instrument database support on Windows
	  works with both standalone mode and VST plugin.
	  the instruments DB file is located in
	  %USERPROFILE%\.linuxsampler\instruments.db which allows different
	  databases for each windows user
	  if no DB is present it automatically creates the .linuxsampler subdir 
	  and then creates an empty DB

  * Gigasampler format engine:
    - fixed a memory leak that could happen when a channel was deleted
      while notes were playing
    - made it possible to load an instrument even if the audio thread
      isn't running
    - added partial support for the "Controller Triggered" MIDI rule,
      enough for piano gigs with pedal noise samples
    - minor fix: only mark FX sends as being modified if really the
      respective FX send MIDI controller was used
    - added support for GM global device volume SysEx message
      (can be selected at compile time to either apply globally to the
      whole sampler [default] or only to the sampler channels that are
      connected to the respective MIDI input port the SysEx message arrived
      on)